--- a/src/app/centro-genetico/toro-data/toro-data.page.scss
+++ b/src/app/centro-genetico/toro-data/toro-data.page.scss
@@ -2,6 +2,10 @@ ion-content{
   --background: linear-gradient(to top, var(--ion-color-primary-tint),var(--ion-color-primary-shade)) !important;
 }
 
+.video-container{
+  text-align: center;
+}
+
 .toolbar{
   width:100%;
   margin-bottom: 1em;
